add navbar item for wordpress

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -41,7 +41,7 @@ html {
 }
 
 #jumbotron {
-  background: url('../images/wave.svg') no-repeat bottom center ;
+  background: url('../images/wave2.svg') no-repeat bottom center ;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
