--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -86,12 +86,12 @@ html {
 
 #wp-jumbo {
   background: rgb(3, 169, 244);
-  background: linear-gradient(90deg, rgba(3, 169, 244, 1) 50%, rgba(255, 255, 255, 1) 50%);
+  background: linear-gradient(155deg, rgba(3, 169, 244, 1) 50%, rgba(255, 255, 255, 1) 50%);
 }
 
 #infernotuts {
   background: rgb(255, 94, 94);
-  background: linear-gradient(90deg, rgb(255, 255, 255) 50%, rgb(255, 94, 94) 50%);
+  background: linear-gradient(135deg, rgba(3, 169, 244, 1) 28%, rgb(255, 94, 94) 28%);
 }
 
 .content ul {
