switched to using yarn

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -53,13 +53,14 @@ html {
   // padding-top: 150px;
 }
 
-#laptop_section {
+#services_section {
   background: url('../images/SVG/wave8.svg') no-repeat top center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 #about .container {
