--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -56,6 +56,14 @@ html {
   background-size: cover;
   // padding-top: 150px;
 }
+#utah {
+  background: url('../images/SVG/utah.svg') no-repeat bottom center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  // padding-top: 150px;
+}
 
 #clearBG {
   background-color: transparent !important;
