color variable updates

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -11,7 +11,6 @@ html {
 
 .navbar-item img {
   max-height: 45px;
-  margin-top: 5px;
 }
 
 .navbar-item {
@@ -90,8 +89,7 @@ html {
   margin-bottom: 10px;
 }
 
-.card-content {
-}
+.card-content {}
 
 .shadowed {
   box-shadow: 0 2px 12px -1px rgba(0, 0, 0, 0.2);
@@ -105,20 +103,16 @@ html {
 
 #wp-jumbo {
   background: rgb(3, 169, 244);
-  background: linear-gradient(
-    155deg,
-    rgba(3, 169, 244, 1) 50%,
-    rgba(255, 255, 255, 1) 50%
-  );
+  background: linear-gradient(155deg,
+      rgba(3, 169, 244, 1) 50%,
+      rgba(255, 255, 255, 1) 50%);
 }
 
 #infernotuts {
   background: rgb(255, 94, 94);
-  background: linear-gradient(
-    135deg,
-    rgba(3, 169, 244, 1) 28%,
-    rgb(255, 94, 94) 28%
-  );
+  background: linear-gradient(135deg,
+      rgba(3, 169, 244, 1) 28%,
+      rgb(255, 94, 94) 28%);
 }
 
 .content ul {
