--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -135,6 +135,10 @@ li {
   margin-top: 75px;
 }
 
+.button {
+  border-radius: 0px;
+}
+
 .is-fixed-top {
   -webkit-animation: fadein 0.25s;
   /* Safari, Chrome and Opera > 12.1 */
