--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -135,6 +135,12 @@ li {
   margin-top: 75px;
 }
 
+.half-highlight {
+  background: linear-gradient(to top, #00BE7C 25%, transparent 25%);
+}
+
+
+
 .button {
   border-radius: 0px;
 }
