--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -136,7 +136,7 @@ li {
 }
 
 .half-highlight {
-  background: linear-gradient(to top, #00BE7C 25%, transparent 25%);
+  background: linear-gradient(to top, #39F284 25%, transparent 25%);
 }
 
 
