updated ux section, removed unused images

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -71,12 +71,13 @@ html {
   margin-top: -52px !important;
 }
 
-#services_section {
-  background: url("../images/SVG/wave8.svg") no-repeat top center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+#about {
+  background: url("../images/SVG/lines.svg") no-repeat right center;
+  background-size: 550px 275px;
+  // -webkit-background-size: cover;
+  // -moz-background-size: cover;
+  // -o-background-size: cover;
+  // background-size: cover;
   padding-top: 50px;
   padding-bottom: 50px;
 }
@@ -89,7 +90,8 @@ html {
   margin-bottom: 10px;
 }
 
-.card-content {}
+.card-content {
+}
 
 .shadowed {
   box-shadow: 0 2px 12px -1px rgba(0, 0, 0, 0.2);
@@ -103,16 +105,20 @@ html {
 
 #wp-jumbo {
   background: rgb(3, 169, 244);
-  background: linear-gradient(155deg,
-      rgba(3, 169, 244, 1) 50%,
-      rgba(255, 255, 255, 1) 50%);
+  background: linear-gradient(
+    155deg,
+    rgba(3, 169, 244, 1) 50%,
+    rgba(255, 255, 255, 1) 50%
+  );
 }
 
 #infernotuts {
   background: rgb(255, 94, 94);
-  background: linear-gradient(135deg,
-      rgba(3, 169, 244, 1) 28%,
-      rgb(255, 94, 94) 28%);
+  background: linear-gradient(
+    135deg,
+    rgba(3, 169, 244, 1) 28%,
+    rgb(255, 94, 94) 28%
+  );
 }
 
 .content ul {
@@ -138,8 +144,6 @@ li {
 .half-highlight {
   background: linear-gradient(to top, #03a9f4 25%, transparent 25%);
 }
-
-
 
 .button {
   border-radius: 0px;
