added stack and wordpress section

--- a/src/components/_custom.scss
+++ b/src/components/_custom.scss
@@ -1,7 +1,7 @@
 $info: #03a9f4;
 $white: #fdfdfd;
 $primary: #435B71;
-$success: #39F284;
+$success: #00BE7C;
 $danger: #FF5e5e;
 $link: #6A80C4;
 $dark: #303030;
