--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -54,13 +54,13 @@ html {
 //   // padding-top: 150px;
 // }
 #utah {
-  background: url("../images/SVG/utah.svg") no-repeat bottom center;
+  background: url("../images/SVG/utahdark.svg") no-repeat bottom center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   // padding-top: 150px;
-  min-height: 750px;
+  min-height: 550px;
 }
 
 .clearBG {
@@ -71,15 +71,17 @@ html {
   margin-top: -52px !important;
 }
 
+
 #about {
   background: url("../images/SVG/lines.svg") no-repeat right center;
   background-size: 550px 275px;
-  // -webkit-background-size: cover;
-  // -moz-background-size: cover;
-  // -o-background-size: cover;
-  // background-size: cover;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 70px;
+  padding-bottom: 80px;
+}
+
+#wordpress {
+  padding-top: 70px;
+  padding-bottom: 30px;
 }
 
 #about .container {
@@ -90,8 +92,7 @@ html {
   margin-bottom: 10px;
 }
 
-.card-content {
-}
+.card-content {}
 
 .shadowed {
   box-shadow: 0 2px 12px -1px rgba(0, 0, 0, 0.2);
@@ -105,20 +106,16 @@ html {
 
 #wp-jumbo {
   background: rgb(3, 169, 244);
-  background: linear-gradient(
-    155deg,
-    rgba(3, 169, 244, 1) 50%,
-    rgba(255, 255, 255, 1) 50%
-  );
+  background: linear-gradient(155deg,
+      rgba(3, 169, 244, 1) 50%,
+      rgba(255, 255, 255, 1) 50%);
 }
 
 #infernotuts {
   background: rgb(255, 94, 94);
-  background: linear-gradient(
-    135deg,
-    rgba(3, 169, 244, 1) 28%,
-    rgb(255, 94, 94) 28%
-  );
+  background: linear-gradient(135deg,
+      rgba(3, 169, 244, 1) 28%,
+      rgb(255, 94, 94) 28%);
 }
 
 .content ul {
@@ -143,6 +140,18 @@ li {
 
 .half-highlight {
   background: linear-gradient(to top, #03a9f4 25%, transparent 25%);
+}
+
+.half-highlight-alt {
+  background: linear-gradient(to top, #00BE7C 25%, transparent 25%);
+}
+
+.half-highlight-link {
+  background: linear-gradient(to top, #6A80C4 25%, transparent 25%);
+}
+
+.half-highlight-danger {
+  background: linear-gradient(to top, #FF5e5e 25%, transparent 25%);
 }
 
 .button {
