contact page updates

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -130,6 +130,11 @@ li {
   background-repeat: repeat;
 }
 
+.dust-section {
+  background-image: url("../images/retina_dust.png");
+  background-repeat: repeat;
+}
+
 #hero-image {
   margin-top: 75px;
 }
